# casper-sentinel

./: LICENSE  README.md  package-lock.json  package.json
contracts/casper-sentinel-governance/: Cargo.toml  rust-toolchain.toml
contracts/casper-sentinel-governance/.cargo/: config.toml
contracts/casper-sentinel-governance/src/: lib.rs
docs/: architecture.md  casper-integration.md  demo-script.md  phase-7b-real-deploy.md  smart-contract-architecture.md  testnet-deployment.md
prisma/: schema.prisma
scripts/casper/: deploy-contract.mjs  record-resolution.mjs
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/committee/: route.ts
src/app/api/debate/: route.ts
src/app/api/evaluations/: route.ts
src/app/api/resolution/: route.ts
src/app/dashboard/: page.tsx
src/app/demo/: page.tsx
src/app/projects/new/: page.tsx
src/components/: animated-vote-field.tsx  metric-card.tsx
src/components/casper/: casper-recording-panel.tsx  featured-testnet-proof.tsx
src/components/demo/: live-demo-runner.tsx
src/components/layout/: dao-app-shell.tsx
src/lib/: demo-data.ts  env.ts
src/lib/validators/: project.ts
src/server/agents/: compliance-agent.ts  market-agent.ts  mock-data.ts  openai-client.ts  orchestrator.ts  prompts.ts  runner.ts  schemas.ts  security-agent.ts  technical-agent.ts  treasury-agent.ts
src/server/casper/: payload.ts  schemas.ts  transaction-service.ts
src/server/committee/: committee-agent.ts  resolution.ts  schemas.ts  voting.ts
src/server/debate/: debate-agent.ts  debate-orchestrator.ts  debate-prompts.ts  debate-schemas.ts
(+7 files in other folders)
