[package]
name = "casper-sentinel-governance"
version = "0.1.0"
edition = "2021"

[dependencies]
casper-contract = { version = "4", default-features = false }
casper-types = "4"
wee_alloc = "0.4"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
